[project]
name = "neko_atsume"
version = "0.1.0"
description = ""
authors = [
    {name = "hjmr", email = "2620990+hjmr@users.noreply.github.com"},
]
dependencies = [
    "requests~=2.26",
    "bs4~=0.0",
    "selenium~=3.141",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black~=21.8b0",
    "pylint~=2.10",
]
